# pw-vault

./: .gitignore  .gitmodules  PICO_CONFIG.c  README.md  build.sh  test.c  test_vaargs.c
host_side/: CMakeLists.txt
pico_side/: .gitignore  CMakeLists.txt  README.md
pico_side/aes_test/: CMakeLists.txt
pico_side/picoflash/: CMakeLists.txt  picoflash.h  picoflash_base.c  picoflash_iolock.c
pico_side/picoutil/: CMakeLists.txt  picoutil.h  picoutil_aes.c  picoutil_byte_allocator.c  picoutil_core1_runner.c  picoutil_exception.c  picoutil_fix_macros.h  picoutil_intercore.c  picoutil_log.c  picoutil_math.c  picoutil_mpu.c  picoutil_opt_buf.h  picoutil_stdtypes.h  picoutil_stdtypes.h.in  picoutil_version.h
pico_side/picoutil/tests/: test_aes.c  test_intercore_queue.c  tests.h
pico_side/src/: main.c  pwv_pico_config.h  pwv_pico_config.h.in
scripts/: dumppreprocessor.py  genhdrconfig.py  getpicoconfig.sh
